fixes a really annoying overlapping margin

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ html {
     width: 100vw;
     margin: 0;
     font-family: 'Roboto';
+    overflow-x: hidden;
 }
 body {
     width: 100vw;
